most work on the main flow done

--- a/src/main/resources/assets/gregtech/lang/ru_ru.lang
+++ b/src/main/resources/assets/gregtech/lang/ru_ru.lang
@@ -1186,7 +1186,7 @@ item.material.oreprefix.ore=%s (Руда)
 item.material.oreprefix.oreGranite=%s (Руда)
 item.material.oreprefix.oreDiorite=%s (Руда)
 item.material.oreprefix.oreAndesite=%s (Руда)
-item.material.oreprefix.crushedCentrifuged=%s (Центрифугированная руда)
+item.material.oreprefix.crushedRefined=%s (Центрифугированная руда)
 item.material.oreprefix.crushedPurified=%s (Очищенная руда)
 item.material.oreprefix.crushed=%s (Дробленная руда)
 item.material.oreprefix.ingotHot=%s (Горячий слиток)
@@ -1927,9 +1927,8 @@ item.ash.dustSmall=Маленькая кучка пепла
 item.ash.dust=Пепел
 item.bone.dustSmall=Маленькая кучка костной муки
 item.bone.dustTiny=Крошечная кучка костной муки
-item.cassiterite_sand.crushedCentrifuged=Центрифугированный касситеритовый песок
+item.cassiterite_sand.crushedRefined=Центрифугированный касситеритовый песок
 item.cassiterite_sand.crushedPurified=Очищеный касситеритовый песок
-item.cassiterite_sand.crushedCentrifuged=Центрифугированный касситеритовый песок
 item.cassiterite_sand.dustTiny=Крошечная кучка касситеритного песка
 item.cassiterite_sand.dustSmall=Маленькая кучка касситеритного песка
 item.cassiterite_sand.dustImpure=Грязная кучка касситеритного песка
@@ -2073,7 +2072,7 @@ item.quartz_sand.dust=Кварцевый песок
 item.glauconite_sand.dustTiny=Крошечная кучка глауконитового песка
 item.glauconite_sand.dustSmall=Маленькая кучка глауконитового песка
 item.glauconite_sand.dust=Глауконитовый песок
-item.bentonite.crushedCentrifuged=Центрифугированный бентонит
+item.bentonite.crushedRefined=Центрифугированный бентонит
 item.bentonite.crushedPurified=Очищеный бентонит
 item.bentonite.crushed=Измельченный бентонит
 item.bentonite.dustTiny=Крошечная кучка бентонита
@@ -2084,7 +2083,7 @@ item.bentonite.dust=Бентонит
 item.fullers_earth.dustTiny=Крошечная кучка странной земли
 item.fullers_earth.dustSmall=Маленькая кучка странной земли
 item.fullers_earth.dust=Странная земля
-item.pitchblende.crushedCentrifuged=Центрифугированный уранит
+item.pitchblende.crushedRefined=Центрифугированный уранит
 item.pitchblende.crushedPurified=Очищеный уранит
 item.pitchblende.crushed=Измельчённый уранит
 item.pitchblende.dustTiny=Крошечная кучка уранита
@@ -2092,9 +2091,8 @@ item.pitchblende.dustSmall=Маленькая кучка уранита
 item.pitchblende.dustImpure=Грязная кучка уранита
 item.pitchblende.dustPure=Очищеный кучка уранита
 item.pitchblende.dust=Уранит
-item.talc.crushedCentrifuged=Талька (Центрифугированная руда)
+item.talc.crushedRefined=Талька (Центрифугированная руда)
 item.talc.crushedPurified=Очищеный талька
-item.talc.crushedCentrifuged=Талька (Центрифугированная руда)
 item.talc.dustTiny=Крошечная кучка талька
 item.talc.dustSmall=Маленькая кучка талька
 item.talc.dustImpure=Грязная кучка талька
